<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SignIn_Login"
        app:layout_constraintStart_toStartOf="@+id/SignIn_Login"
        app:layout_constraintTop_toBottomOf="@+id/SignIn_Login"
        app:layout_constraintVertical_bias="0.146">

        <TextView
            android:id="@+id/textView3_newUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/new_user"
            android:textSize="15sp" />

        <Button
            android:id="@+id/textButtonRegister_Login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRegisterClick"
            android:text="@string/register"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPassword_Login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldEmail_Login"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldEmail_Login"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEmail_Login"
        app:layout_constraintVertical_bias="0.062"
        app:startIconDrawable="@android:drawable/ic_lock_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SignIn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_in"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldPassword_Login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldPassword_Login"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPassword_Login"
        app:layout_constraintVertical_bias="0.108" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmail_Login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewLogin"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="@+id/textViewLogin"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        app:layout_constraintVertical_bias="0.046"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>





    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>