<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPasswordConfirm_Register"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/confirm_password"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/mtrl_ic_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldPassword_Register"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldPassword_Register"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPassword_Register"
        app:layout_constraintVertical_bias="0.084"
        app:startIconDrawable="@android:drawable/ic_lock_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textPassword"
            android:paddingEnd="40dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldPassword_Register"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:boxBackgroundMode="outline"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldEmail_Register"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldEmail_Register"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldEmail_Register"
        app:layout_constraintVertical_bias="0.049"
        app:startIconDrawable="@android:drawable/ic_lock_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textPassword"
            android:paddingEnd="40dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonContinue"
        app:layout_constraintStart_toStartOf="@+id/buttonContinue"
        app:layout_constraintTop_toBottomOf="@+id/buttonContinue"
        app:layout_constraintVertical_bias="0.191">

        <TextView
            android:id="@+id/textView3_existingUser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/existing_user"
            android:textSize="15sp" />

        <Button
            android:id="@+id/textButtonLogin_Register"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/purple_200"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/continueButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/outlinedTextFieldPasswordConfirm_Register"
        app:layout_constraintStart_toStartOf="@+id/outlinedTextFieldPasswordConfirm_Register"
        app:layout_constraintTop_toBottomOf="@+id/outlinedTextFieldPasswordConfirm_Register"
        app:layout_constraintVertical_bias="0.129" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextFieldEmail_Register"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/email"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewSignUp"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="@+id/textViewSignUp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUp"
        app:layout_constraintVertical_bias="0.062"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textEmailAddress"
            android:paddingEnd="40dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>